--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
   <body>
     <h3><a href="https://github.com/xylemic">xylemic</a></h3>
     <nav>
-      <a class="nav-link" data-page="index" href="/index.html">Home</a>
-      <a class="nav-link" data-page="work" href="/about.html">About</a>
-      <a class="nav-link" data-page="work" href="/work.html">Work</a>
+      <a class="nav-link" data-page="index" href="index.html">Home</a>
+      <a class="nav-link" data-page="work" href="about.html">About</a>
+      <a class="nav-link" data-page="work" href="work.html">Work</a>
       <a class="nav-link" data-page="articles" href="#">Articles</a>
       <a class="nav-link" data-page="resources" href="#">Resources</a>
-      <a class="nav-link" data-page="contact" href="/contact.html">Contact</a>
+      <a class="nav-link" data-page="contact" href="contact.html">Contact</a>
     </nav>
     <pre class="ascii">
 ..........................................................................................................................................................................................................................................................
